[package]
name = "fuzz_runner"
version = "0.1.0"
authors = ["coco <cornelius@hexgolems.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.26"
libc = "0.2"
tempfile = "3"
# ron complains with serde < 1.0.103
serde = { version = "1.0.103", features = ["derive"] }
byteorder = "1"
snafu = "0.7"
timeout-readwrite = "0.3"
glob="0.3"
config={path="../config"}
colored = "2"
derivative = "2.2"
fs4 = "0.6"
